azure-kubernetes-service/resources/applications/spring-petclinic-customers-service.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ConfigMap 
  metadata:
    name: spring-petclinic-customers-service
    namespace: default
  data:
    EUREKA_CLIENT_ENABLED: 'true'
    SPRING_APPLICATION_NAME: spring-petclinic-customers-service
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: spring-petclinic-customers-service
    namespace: default
  spec:
    selector:
      matchLabels:
        app: spring-petclinic-customers-service
    template:
      metadata:
        labels:
          app: spring-petclinic-customers-service
          azure.workload.identity/use: "true"
      spec:
        containers:
        - env:
          - name: JAVA_TOOL_OPTIONS
            value: -Deureka.client.service-url.defaultZone=$(SPRING_EUREKA_SERVICE_URL)
              -Dfile.encoding=UTF8 -DCONFIG_SERVER_URL=$(SPRING_CLOUD_CONFIG_URI) -Dspring.cloud.config.uri=$(SPRING_CLOUD_CONFIG_URI)
              -Dspring.cloud.config.fail-fast=$(SPRING_CLOUD_CONFIG_FAILFAST) -Dspring.config.import=optional:configserver:$(SPRING_CLOUD_CONFIG_URI)/
          - name: SERVER_PORT
            value: '8080'
          - name: APPLICATIONINSIGHTS_ROLE_NAME
            value: spring-petclinic-customers-service
          image: <acr-name>.azurecr.io/spring-petclinic-customers-service:<customers-service-app-image-tag>
          name: spring-petclinic-customers-service
- apiVersion: v1
  kind: Service
  metadata:
    name: spring-petclinic-customers-service
    namespace: default
  spec:
    selector:
      app: spring-petclinic-customers-service
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
    type: ClusterIP
