azure-kubernetes-service/resources/applications/spring-petclinic-api-gateway.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: api-gateway
    namespace: default
  data:
    EUREKA_CLIENT_ENABLED: 'true'
    SPRING_APPLICATION_NAME: api-gateway
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: api-gateway
    namespace: default
  spec:
    progressDeadlineSeconds: 900
    replicas: 1
    revisionHistoryLimit: 0
    selector:
      matchLabels:
        app: api-gateway
    strategy:
      rollingUpdate:
        maxSurge: "0%"
        maxUnavailable: "25%"
      type: RollingUpdate
    template:
      metadata:
        annotations:
          cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
        labels:
          app: api-gateway
          azure.workload.identity/use: "true"
      spec:
        automountServiceAccountToken: false
        serviceAccountName: <service-connection-service-account>
        containers:
        - env:
          - name: POD_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
          - name: JAVA_TOOL_OPTIONS
            value: -Deureka.client.service-url.defaultZone=$(SPRING_EUREKA_SERVICE_URL)
              -Dfile.encoding=UTF8 -DCONFIG_SERVER_URL=$(SPRING_CLOUD_CONFIG_URI) -Dspring.cloud.config.uri=$(SPRING_CLOUD_CONFIG_URI)
              -Dspring.cloud.config.fail-fast=$(SPRING_CLOUD_CONFIG_FAILFAST) -Dspring.config.import=optional:configserver:$(SPRING_CLOUD_CONFIG_URI)/
          - name: SERVER_PORT
            value: '8080'
          - name: APPLICATIONINSIGHTS_ROLE_NAME
            value: api-gateway
          image: <acr-name>.azurecr.io/spring-petclinic-api-gateway:<api-gateway-app-image-tag>
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 300
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 3
          name: api-gateway
          ports:
          - containerPort: 8080
            name: app-port
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 3
          resources:
            limits:
              cpu: "2"
              ephemeral-storage: "5000Mi"
              memory: "4Gi"
            requests:
              cpu: "2"
              ephemeral-storage: "5000Mi"
              memory: "4Gi"
          volumeMounts:
          - mountPath: /tmp
            name: temp
        terminationGracePeriodSeconds: 90
        volumes:
        - emptyDir:
            sizeLimit: "5Gi"
          name: temp
- apiVersion: v1
  kind: Service
  metadata:
    name: api-gateway
    namespace: default
  spec:
    selector:
      app: api-gateway
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
    type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://<keyvault-name>.vault.azure.net/certificates/<tls-cert-name>
  name: spring-petclinic-api-gateway-ingress
  namespace: default
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: <spring-petclinic-api-gateway-host>
    http:
      paths:
      - backend:
          service:
            name: spring-petclinic-api-gateway
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - <spring-petclinic-api-gateway-host>
    # Secret name should be the in patthen "keyvault-<metadata.name>"
    secretName: keyvault-spring-petclinic-api-gateway-ingress
